--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "express": "4.16.3",
-    "pg": "8.0.3",
-    "redis": "2.8.0",
-    "cors": "2.8.4",
-    "nodemon": "1.18.3",
-    "body-parser": "*"
+    "express": "^4.19.2",
+    "pg": "^8.12.0",
+    "redis": "^4.7.0",
+    "cors": "^2.8.4",
+    "nodemon": "^3.1.4",
+    "body-parser": "^1.20.2"
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon"
   }
 
 }
