--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,8 +1,17 @@
 FROM node:16-alpine
+
 WORKDIR '/app'
 
+# Only copy package.json first for caching layer
 COPY ./package.json ./
+
 RUN npm install
 
+# Now copy the rest of the app
 COPY . .
+
+# Set environment explicitly
+ENV CI=true
+
+# Command to run tests (for CI like GitHub Actions)
 CMD ["npm", "test", "--", "--watchAll=false"]
