--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build test image and run tests
+      - name: Build test image
         run: |
           docker build -t gooferbyte/react-test -f ./client/Dockerfile.dev ./client
-          docker run -e CI=true gooferbyte/react-test npm test
+
+      - name: Run tests
+        run: |
+          docker run -e CI=true gooferbyte/react-test npm run test -- --watchAll=false
 
   build-and-deploy:
     needs: test
@@ -29,15 +32,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to DockerHub
+      - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build Docker images
+      - name: Build production Docker images
         run: |
           docker build -t gooferbyte/multi-client ./client
           docker build -t gooferbyte/multi-nginx ./nginx
           docker build -t gooferbyte/multi-server ./server
           docker build -t gooferbyte/multi-worker ./worker
+
+      - name: Tag Docker images
+        run: |
+          docker tag gooferbyte/multi-client gooferbyte/multi-client:latest
+          docker tag gooferbyte/multi-nginx gooferbyte/multi-nginx:latest
+          docker tag gooferbyte/multi-server gooferbyte/multi-server:latest
+          docker tag gooferbyte/multi-worker gooferbyte/multi-worker:latest
 
       - name: Push Docker images
         run: |
@@ -45,3 +55,11 @@ jobs:
           docker push gooferbyte/multi-nginx
           docker push gooferbyte/multi-server
           docker push gooferbyte/multi-worker
+
+
+      # Optional: Add your AWS EB deployment step here
+      # Example:
+      # - name: Deploy to Elastic Beanstalk
+      #   run: |
+      #     zip -r deploy.zip .ebextensions Dockerrun.aws.json
+      #     aws elasticbeanstalk create-application-version ...
